ESJava/src/polyglot/ext/esj/tologic/SolverOutputParser.java
// $ANTLR 3.1.3 Mar 18, 2009 10:09:25 SolverOutput.g 2009-08-19 19:47:45

package polyglot.ext.esj.tologic;

import java.util.HashMap;
import org.antlr.runtime.CommonTokenStream;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

public class SolverOutputParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "PLUS", "MINUS", "MULT", "DIV", "COMMA", "EQUALS", "LBRACKET", "RBRACKET", "LBRACE", "RBRACE", "VCHAR", "LOWER", "UPPER", "DIGIT", "SPACE", "'*** PROBLEM 1 ***'", "'*** END ***'", "'---STATS---'", "'UNSATISFIABLE'", "'SATISFIABLE'", "'---OUTCOME---'", "'TRIVIALLY_'", "'---INSTANCE---'", "'relations:'", "'_'", "'A'"
    };
    public static final int COMMA=8;
    public static final int SPACE=18;
    public static final int MINUS=5;
    public static final int VCHAR=14;
    public static final int T__28=28;
    public static final int T__23=23;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int LOWER=15;
    public static final int T__19=19;
    public static final int LBRACKET=10;
    public static final int T__22=22;
    public static final int LBRACE=12;
    public static final int T__29=29;
    public static final int RBRACE=13;
    public static final int EQUALS=9;
    public static final int UPPER=16;
    public static final int EOF=-1;
    public static final int T__27=27;
    public static final int RBRACKET=11;
    public static final int T__24=24;
    public static final int T__26=26;
    public static final int T__25=25;
    public static final int DIV=7;
    public static final int DIGIT=17;
    public static final int PLUS=4;
    public static final int MULT=6;

    // delegates
    // delegators
    static ArrayList models;
    public ArrayList models() { return models; }


        public SolverOutputParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public SolverOutputParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return SolverOutputParser.tokenNames; }
    public String getGrammarFileName() { return "SolverOutput.g"; }


        public static void main(String[] args) throws Exception {
            SolverOutputLexer lex = new SolverOutputLexer(new ANTLRFileStream(args[0]));
           	CommonTokenStream tokens = new CommonTokenStream(lex);

            SolverOutputParser parser = new SolverOutputParser(tokens);

            try {
                parser.solutions();
            } catch (RecognitionException e)  {
                e.printStackTrace();
            }
        }



    // $ANTLR start "solutions"
    // SolverOutput.g:50:1: solutions returns [ArrayList models] : (s= solution )+ ;
    public final void solutions() throws RecognitionException {

        ArrayList s = null;


        try {
            // SolverOutput.g:50:38: ( (s= solution )+ )
            // SolverOutput.g:51:5: (s= solution )+
            {
             models = new ArrayList(); 
            // SolverOutput.g:52:7: (s= solution )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( ((LA1_0>=SPACE && LA1_0<=19)) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // SolverOutput.g:52:9: s= solution
            	    {
            	    pushFollow(FOLLOW_solution_in_solutions176);
            	    s=solution();

            	    state._fsp--;

            	     models.add(s); 

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }

    }
    // $ANTLR end "solutions"


    // $ANTLR start "solution"
    // SolverOutput.g:54:1: solution returns [ArrayList model] : header (o= unsatOutcome | o= satOutcome sol= instance ) stats ;
    public final ArrayList solution() throws RecognitionException {
        ArrayList model = null;

        boolean o = false;

        HashMap sol = null;


        try {
            // SolverOutput.g:54:36: ( header (o= unsatOutcome | o= satOutcome sol= instance ) stats )
            // SolverOutput.g:55:5: header (o= unsatOutcome | o= satOutcome sol= instance ) stats
            {
            pushFollow(FOLLOW_header_in_solution199);
            header();

            state._fsp--;

            // SolverOutput.g:55:12: (o= unsatOutcome | o= satOutcome sol= instance )
            int alt2=2;
            alt2 = dfa2.predict(input);
            switch (alt2) {
                case 1 :
                    // SolverOutput.g:55:14: o= unsatOutcome
                    {
                    pushFollow(FOLLOW_unsatOutcome_in_solution207);
                    o=unsatOutcome();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // SolverOutput.g:55:33: o= satOutcome sol= instance
                    {
                    pushFollow(FOLLOW_satOutcome_in_solution215);
                    o=satOutcome();

                    state._fsp--;

                    pushFollow(FOLLOW_instance_in_solution221);
                    sol=instance();

                    state._fsp--;


                    }
                    break;

            }

            pushFollow(FOLLOW_stats_in_solution225);
            stats();

            state._fsp--;

             model = new ArrayList(); model.add(o); model.add(sol); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return model;
    }
    // $ANTLR end "solution"


    // $ANTLR start "header"
    // SolverOutput.g:58:1: header : spaces '*** PROBLEM 1 ***' ;
    public final void header() throws RecognitionException {
        try {
            // SolverOutput.g:58:8: ( spaces '*** PROBLEM 1 ***' )
            // SolverOutput.g:58:10: spaces '*** PROBLEM 1 ***'
            {
            pushFollow(FOLLOW_spaces_in_header244);
            spaces();

            state._fsp--;

            match(input,19,FOLLOW_19_in_header246); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "header"


    // $ANTLR start "end"
    // SolverOutput.g:60:1: end : '*** END ***' spaces ;
    public final void end() throws RecognitionException {
        try {
            // SolverOutput.g:60:5: ( '*** END ***' spaces )
            // SolverOutput.g:60:7: '*** END ***' spaces
            {
            match(input,20,FOLLOW_20_in_end255); 
            pushFollow(FOLLOW_spaces_in_end257);
            spaces();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "end"


    // $ANTLR start "stats"
    // SolverOutput.g:62:1: stats : spaces '---STATS---' ( VCHAR )* ;
    public final void stats() throws RecognitionException {
        try {
            // SolverOutput.g:62:7: ( spaces '---STATS---' ( VCHAR )* )
            // SolverOutput.g:62:9: spaces '---STATS---' ( VCHAR )*
            {
            pushFollow(FOLLOW_spaces_in_stats266);
            spaces();

            state._fsp--;

            match(input,21,FOLLOW_21_in_stats268); 
            // SolverOutput.g:62:30: ( VCHAR )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==VCHAR) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // SolverOutput.g:62:30: VCHAR
            	    {
            	    match(input,VCHAR,FOLLOW_VCHAR_in_stats270); 

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "stats"


    // $ANTLR start "unsatOutcome"
    // SolverOutput.g:64:1: unsatOutcome returns [boolean o] : outcome 'UNSATISFIABLE' ;
    public final boolean unsatOutcome() throws RecognitionException {
        boolean o = false;

        try {
            // SolverOutput.g:64:34: ( outcome 'UNSATISFIABLE' )
            // SolverOutput.g:65:5: outcome 'UNSATISFIABLE'
            {
            pushFollow(FOLLOW_outcome_in_unsatOutcome289);
            outcome();

            state._fsp--;

            match(input,22,FOLLOW_22_in_unsatOutcome291); 
             o = false; 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return o;
    }
    // $ANTLR end "unsatOutcome"


    // $ANTLR start "satOutcome"
    // SolverOutput.g:68:1: satOutcome returns [boolean o] : outcome 'SATISFIABLE' ;
    public final boolean satOutcome() throws RecognitionException {
        boolean o = false;

        try {
            // SolverOutput.g:68:32: ( outcome 'SATISFIABLE' )
            // SolverOutput.g:69:5: outcome 'SATISFIABLE'
            {
            pushFollow(FOLLOW_outcome_in_satOutcome320);
            outcome();

            state._fsp--;

            match(input,23,FOLLOW_23_in_satOutcome322); 
             o = true; 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return o;
    }
    // $ANTLR end "satOutcome"


    // $ANTLR start "outcome"
    // SolverOutput.g:72:1: outcome : spaces '---OUTCOME---' spaces ( 'TRIVIALLY_' )? ;
    public final void outcome() throws RecognitionException {
        try {
            // SolverOutput.g:72:9: ( spaces '---OUTCOME---' spaces ( 'TRIVIALLY_' )? )
            // SolverOutput.g:72:11: spaces '---OUTCOME---' spaces ( 'TRIVIALLY_' )?
            {
            pushFollow(FOLLOW_spaces_in_outcome341);
            spaces();

            state._fsp--;

            match(input,24,FOLLOW_24_in_outcome343); 
            pushFollow(FOLLOW_spaces_in_outcome345);
            spaces();

            state._fsp--;

            // SolverOutput.g:72:41: ( 'TRIVIALLY_' )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==25) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // SolverOutput.g:72:41: 'TRIVIALLY_'
                    {
                    match(input,25,FOLLOW_25_in_outcome347); 

                    }
                    break;

            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "outcome"


    // $ANTLR start "instance"
    // SolverOutput.g:74:1: instance returns [HashMap rels] : spaces '---INSTANCE---' spaces 'relations:' LBRACE rs= relations RBRACE ;
    public final HashMap instance() throws RecognitionException {
        HashMap rels = null;

        HashMap rs = null;


        try {
            // SolverOutput.g:74:33: ( spaces '---INSTANCE---' spaces 'relations:' LBRACE rs= relations RBRACE )
            // SolverOutput.g:75:5: spaces '---INSTANCE---' spaces 'relations:' LBRACE rs= relations RBRACE
            {
            pushFollow(FOLLOW_spaces_in_instance366);
            spaces();

            state._fsp--;

            match(input,26,FOLLOW_26_in_instance368); 
            pushFollow(FOLLOW_spaces_in_instance370);
            spaces();

            state._fsp--;

            match(input,27,FOLLOW_27_in_instance372); 
            match(input,LBRACE,FOLLOW_LBRACE_in_instance374); 
            pushFollow(FOLLOW_relations_in_instance380);
            rs=relations();

            state._fsp--;

            match(input,RBRACE,FOLLOW_RBRACE_in_instance382); 
             rels = rs; 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return rels;
    }
    // $ANTLR end "instance"


    // $ANTLR start "relations"
    // SolverOutput.g:78:1: relations returns [HashMap rs] : r= relation ( COMMA r= relation )* ;
    public final HashMap relations() throws RecognitionException {
        HashMap rs = null;

        SolverOutputParser.relation_return r = null;


        try {
            // SolverOutput.g:78:32: (r= relation ( COMMA r= relation )* )
            // SolverOutput.g:79:5: r= relation ( COMMA r= relation )*
            {
            pushFollow(FOLLOW_relation_in_relations417);
            r=relation();

            state._fsp--;

             rs = new HashMap(); rs.put((r!=null?r.rn:null),(r!=null?r.rv:null)); 
            // SolverOutput.g:80:9: ( COMMA r= relation )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==COMMA) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // SolverOutput.g:80:10: COMMA r= relation
            	    {
            	    match(input,COMMA,FOLLOW_COMMA_in_relations431); 
            	    pushFollow(FOLLOW_relation_in_relations437);
            	    r=relation();

            	    state._fsp--;

            	     rs.put((r!=null?r.rn:null),(r!=null?r.rv:null)); 

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return rs;
    }
    // $ANTLR end "relations"

    public static class relation_return extends ParserRuleReturnScope {
        public String rn;
        public ArrayList rv;
    };

    // $ANTLR start "relation"
    // SolverOutput.g:82:1: relation returns [String rn, ArrayList rv] : n= name EQUALS v= value ;
    public final SolverOutputParser.relation_return relation() throws RecognitionException {
        SolverOutputParser.relation_return retval = new SolverOutputParser.relation_return();
        retval.start = input.LT(1);

        String n = null;

        ArrayList v = null;


        try {
            // SolverOutput.g:82:44: (n= name EQUALS v= value )
            // SolverOutput.g:83:6: n= name EQUALS v= value
            {
            pushFollow(FOLLOW_name_in_relation465);
            n=name();

            state._fsp--;

            match(input,EQUALS,FOLLOW_EQUALS_in_relation467); 
            pushFollow(FOLLOW_value_in_relation473);
            v=value();

            state._fsp--;

             retval.rn = n; retval.rv = v; 

            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "relation"


    // $ANTLR start "name"
    // SolverOutput.g:86:1: name returns [String n] : spaces (a= ( LOWER | '_' ) )+ d= number ;
    public final String name() throws RecognitionException {
        String n = null;

        Token a=null;
        String d = null;


        try {
            // SolverOutput.g:86:25: ( spaces (a= ( LOWER | '_' ) )+ d= number )
            // SolverOutput.g:87:6: spaces (a= ( LOWER | '_' ) )+ d= number
            {
            pushFollow(FOLLOW_spaces_in_name503);
            spaces();

            state._fsp--;

            // SolverOutput.g:87:15: (a= ( LOWER | '_' ) )+
            int cnt6=0;
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( (LA6_0==LOWER||LA6_0==28) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // SolverOutput.g:87:15: a= ( LOWER | '_' )
            	    {
            	    a=(Token)input.LT(1);
            	    if ( input.LA(1)==LOWER||input.LA(1)==28 ) {
            	        input.consume();
            	        state.errorRecovery=false;
            	    }
            	    else {
            	        MismatchedSetException mse = new MismatchedSetException(null,input);
            	        throw mse;
            	    }


            	    }
            	    break;

            	default :
            	    if ( cnt6 >= 1 ) break loop6;
                        EarlyExitException eee =
                            new EarlyExitException(6, input);
                        throw eee;
                }
                cnt6++;
            } while (true);

             n = a.getText(); 
            pushFollow(FOLLOW_number_in_name531);
            d=number();

            state._fsp--;

             n = n + d; 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return n;
    }
    // $ANTLR end "name"


    // $ANTLR start "value"
    // SolverOutput.g:90:1: value returns [ArrayList v] : l= list ;
    public final ArrayList value() throws RecognitionException {
        ArrayList v = null;

        ArrayList l = null;


        try {
            // SolverOutput.g:90:29: (l= list )
            // SolverOutput.g:91:6: l= list
            {
            pushFollow(FOLLOW_list_in_value556);
            l=list();

            state._fsp--;

             v = l; 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return v;
    }
    // $ANTLR end "value"


    // $ANTLR start "list"
    // SolverOutput.g:94:1: list returns [ArrayList l] : ( LBRACKET RBRACKET | LBRACKET is= listItems RBRACKET );
    public final ArrayList list() throws RecognitionException {
        ArrayList l = null;

        ArrayList is = null;


        try {
            // SolverOutput.g:94:28: ( LBRACKET RBRACKET | LBRACKET is= listItems RBRACKET )
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==LBRACKET) ) {
                int LA7_1 = input.LA(2);

                if ( (LA7_1==RBRACKET) ) {
                    alt7=1;
                }
                else if ( (LA7_1==LBRACKET) ) {
                    alt7=2;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 7, 1, input);

                    throw nvae;
                }
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 7, 0, input);

                throw nvae;
            }
            switch (alt7) {
                case 1 :
                    // SolverOutput.g:95:6: LBRACKET RBRACKET
                    {
                    match(input,LBRACKET,FOLLOW_LBRACKET_in_list586); 
                    match(input,RBRACKET,FOLLOW_RBRACKET_in_list588); 
                     l = new ArrayList(); 

                    }
                    break;
                case 2 :
                    // SolverOutput.g:97:6: LBRACKET is= listItems RBRACKET
                    {
                    match(input,LBRACKET,FOLLOW_LBRACKET_in_list606); 
                    pushFollow(FOLLOW_listItems_in_list612);
                    is=listItems();

                    state._fsp--;

                    match(input,RBRACKET,FOLLOW_RBRACKET_in_list614); 
                     l = is; 

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return l;
    }
    // $ANTLR end "list"


    // $ANTLR start "listItems"
    // SolverOutput.g:100:1: listItems returns [ArrayList is] : a= listItem ( COMMA b= listItem )* ;
    public final ArrayList listItems() throws RecognitionException {
        ArrayList is = null;

        ArrayList a = null;

        ArrayList b = null;


        try {
            // SolverOutput.g:100:33: (a= listItem ( COMMA b= listItem )* )
            // SolverOutput.g:101:6: a= listItem ( COMMA b= listItem )*
            {
            pushFollow(FOLLOW_listItem_in_listItems646);
            a=listItem();

            state._fsp--;

             is = new ArrayList(); is.add(a); 
            // SolverOutput.g:102:9: ( COMMA b= listItem )*
            loop8:
            do {
                int alt8=2;
                int LA8_0 = input.LA(1);

                if ( (LA8_0==COMMA) ) {
                    alt8=1;
                }


                switch (alt8) {
            	case 1 :
            	    // SolverOutput.g:102:10: COMMA b= listItem
            	    {
            	    match(input,COMMA,FOLLOW_COMMA_in_listItems660); 
            	    pushFollow(FOLLOW_listItem_in_listItems666);
            	    b=listItem();

            	    state._fsp--;

            	     is.add(b); 

            	    }
            	    break;

            	default :
            	    break loop8;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return is;
    }
    // $ANTLR end "listItems"


    // $ANTLR start "listItem"
    // SolverOutput.g:104:1: listItem returns [ArrayList i] : (a= binaryTuple | a= ternaryTuple ) ;
    public final ArrayList listItem() throws RecognitionException {
        ArrayList i = null;

        ArrayList a = null;


        try {
            // SolverOutput.g:104:31: ( (a= binaryTuple | a= ternaryTuple ) )
            // SolverOutput.g:105:6: (a= binaryTuple | a= ternaryTuple )
            {
            // SolverOutput.g:105:6: (a= binaryTuple | a= ternaryTuple )
            int alt9=2;
            alt9 = dfa9.predict(input);
            switch (alt9) {
                case 1 :
                    // SolverOutput.g:105:8: a= binaryTuple
                    {
                    pushFollow(FOLLOW_binaryTuple_in_listItem699);
                    a=binaryTuple();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // SolverOutput.g:105:26: a= ternaryTuple
                    {
                    pushFollow(FOLLOW_ternaryTuple_in_listItem707);
                    a=ternaryTuple();

                    state._fsp--;


                    }
                    break;

            }

             i = a ; 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return i;
    }
    // $ANTLR end "listItem"


    // $ANTLR start "binaryTuple"
    // SolverOutput.g:108:1: binaryTuple returns [ArrayList t] : LBRACKET a= atom COMMA b= atom RBRACKET ;
    public final ArrayList binaryTuple() throws RecognitionException {
        ArrayList t = null;

        int a = 0;

        int b = 0;


        try {
            // SolverOutput.g:108:34: ( LBRACKET a= atom COMMA b= atom RBRACKET )
            // SolverOutput.g:109:6: LBRACKET a= atom COMMA b= atom RBRACKET
            {
            match(input,LBRACKET,FOLLOW_LBRACKET_in_binaryTuple737); 
            pushFollow(FOLLOW_atom_in_binaryTuple743);
            a=atom();

            state._fsp--;

            match(input,COMMA,FOLLOW_COMMA_in_binaryTuple745); 
            pushFollow(FOLLOW_atom_in_binaryTuple751);
            b=atom();

            state._fsp--;

            match(input,RBRACKET,FOLLOW_RBRACKET_in_binaryTuple753); 
             t = new ArrayList();
                      t.add(a); t.add(b); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return t;
    }
    // $ANTLR end "binaryTuple"


    // $ANTLR start "ternaryTuple"
    // SolverOutput.g:113:1: ternaryTuple returns [ArrayList t] : LBRACKET a= atom COMMA b= atom COMMA c= atom RBRACKET ;
    public final ArrayList ternaryTuple() throws RecognitionException {
        ArrayList t = null;

        int a = 0;

        int b = 0;

        int c = 0;


        try {
            // SolverOutput.g:113:35: ( LBRACKET a= atom COMMA b= atom COMMA c= atom RBRACKET )
            // SolverOutput.g:114:6: LBRACKET a= atom COMMA b= atom COMMA c= atom RBRACKET
            {
            match(input,LBRACKET,FOLLOW_LBRACKET_in_ternaryTuple783); 
            pushFollow(FOLLOW_atom_in_ternaryTuple789);
            a=atom();

            state._fsp--;

            match(input,COMMA,FOLLOW_COMMA_in_ternaryTuple791); 
            pushFollow(FOLLOW_atom_in_ternaryTuple797);
            b=atom();

            state._fsp--;

            match(input,COMMA,FOLLOW_COMMA_in_ternaryTuple799); 
            pushFollow(FOLLOW_atom_in_ternaryTuple805);
            c=atom();

            state._fsp--;

            match(input,RBRACKET,FOLLOW_RBRACKET_in_ternaryTuple807); 
             t = new ArrayList();
                      t.add(a); t.add(b); t.add(c); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return t;
    }
    // $ANTLR end "ternaryTuple"


    // $ANTLR start "atom"
    // SolverOutput.g:118:1: atom returns [int n] : spaces 'A' d= number ;
    public final int atom() throws RecognitionException {
        int n = 0;

        String d = null;


        try {
            // SolverOutput.g:118:21: ( spaces 'A' d= number )
            // SolverOutput.g:119:6: spaces 'A' d= number
            {
            pushFollow(FOLLOW_spaces_in_atom834);
            spaces();

            state._fsp--;

            match(input,29,FOLLOW_29_in_atom836); 
            pushFollow(FOLLOW_number_in_atom842);
            d=number();

            state._fsp--;

             n = Integer.parseInt(d); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return n;
    }
    // $ANTLR end "atom"


    // $ANTLR start "letter"
    // SolverOutput.g:122:1: letter : ( LOWER | UPPER );
    public final void letter() throws RecognitionException {
        try {
            // SolverOutput.g:122:8: ( LOWER | UPPER )
            // SolverOutput.g:
            {
            if ( (input.LA(1)>=LOWER && input.LA(1)<=UPPER) ) {
                input.consume();
                state.errorRecovery=false;
            }
            else {
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "letter"


    // $ANTLR start "number"
    // SolverOutput.g:124:1: number returns [String n] : (d= DIGIT )+ ;
    public final String number() throws RecognitionException {
        String n = null;

        Token d=null;

        try {
            // SolverOutput.g:124:27: ( (d= DIGIT )+ )
            // SolverOutput.g:125:9: (d= DIGIT )+
            {
             n = ""; 
            // SolverOutput.g:125:22: (d= DIGIT )+
            int cnt10=0;
            loop10:
            do {
                int alt10=2;
                int LA10_0 = input.LA(1);

                if ( (LA10_0==DIGIT) ) {
                    alt10=1;
                }


                switch (alt10) {
            	case 1 :
            	    // SolverOutput.g:125:24: d= DIGIT
            	    {
            	    d=(Token)match(input,DIGIT,FOLLOW_DIGIT_in_number894); 
            	     n = n + d.getText(); 

            	    }
            	    break;

            	default :
            	    if ( cnt10 >= 1 ) break loop10;
                        EarlyExitException eee =
                            new EarlyExitException(10, input);
                        throw eee;
                }
                cnt10++;
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return n;
    }
    // $ANTLR end "number"


    // $ANTLR start "spaces"
    // SolverOutput.g:127:1: spaces : ( SPACE )* ;
    public final void spaces() throws RecognitionException {
        try {
            // SolverOutput.g:127:8: ( ( SPACE )* )
            // SolverOutput.g:127:10: ( SPACE )*
            {
            // SolverOutput.g:127:10: ( SPACE )*
            loop11:
            do {
                int alt11=2;
                int LA11_0 = input.LA(1);

                if ( (LA11_0==SPACE) ) {
                    alt11=1;
                }


                switch (alt11) {
            	case 1 :
            	    // SolverOutput.g:127:10: SPACE
            	    {
            	    match(input,SPACE,FOLLOW_SPACE_in_spaces908); 

            	    }
            	    break;

            	default :
            	    break loop11;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "spaces"

    // Delegated rules

